--- a/pages/styles.css
+++ b/pages/styles.css
@@ -12,10 +12,6 @@ body{
     line-height: 1.5;
 }
 
-section > article > p,h1 {
-  align-items: center;
-  text-align: center;
-}
 
 
 .main-section{
@@ -23,45 +19,59 @@ section > article > p,h1 {
   padding-bottom: 20px;
   z-index: 0;
 }
+
+
+
+article,h1{
+  margin: 20px 50px;
+
+}
+
+
 .header {
-    background-color: #645b46;
-    color: white;
-    display: center, inline-block;
-    justify-content: space-between;
-    text-align: center;
-    padding: 0 10%;
-    position: sticky;
-    top: 0;
-    overflow: hidden;
-    width: 100%;
-    z-index: 1;
-  }
-  .header .nav-links{
-  
-    list-style: none;
-  }
-  .header .nav-links li{
-  
-    display: inline-block;
-    margin: 10px 5px;
-    padding: 5px 5px;
-  }
-  .header .nav-links a{
-    font-size: 700;
-    color: white;
-    text-decoration: none;
-  }
-  .header .nav-links li:hover{
-    transform: scale(1.1);
-  }
-  .header .nav-links .right{
-   float: right;
-  }
-  .header .nav-links .left{
-    float: left;
-  }
+  background-color: #645b46;
+  color: white;
+  display: center, inline-block;
+  justify-content: space-between;
+  text-align: center;
+  padding: 0 10%;
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+  width: 100%;
+  z-index: 1;
+}
+.header .nav-links{
+
+  list-style: none;
+}
+.header .nav-links li{
+
+  display: inline-block;
+  margin: 10px 5px;
+  padding: 5px 5px;
+}
+.header .nav-links a{
+  font-size: 700;
+  color: white;
+  text-decoration: none;
+}
+.header .nav-links li:hover{
+  transform: scale(1.1);
+}
+.header .nav-links .right{
+  float: right;
+}
+.header .nav-links .left{
+  float: left;
+}
 
 a{
   text-decoration: none;
   color: black;
+}
+
+.introduccion{  
+  font-size:1.3rem;
+  margin-bottom: 40px;
 }
